# chip8-cpp

./: CMakeLists.txt  README.md  chip8.cpp  chip8.hpp  chip8_application.cpp  chip8_application.hpp  chip8_disassembly.cpp  chip8_disassembly.h  chip8_disassembly.ui  chip8_display.cpp  chip8_display.h  chip8_display.ui  chip8_mainwindow.cpp  chip8_mainwindow.h  chip8_mainwindow.ui  chip8_memory.cpp  chip8_memory.h  chip8_memory.ui  chip8_registers.cpp  chip8_registers.h  chip8_registers.ui  chip8_stack.cpp  chip8_stack.h  chip8_stack.ui  chip8_window.cpp  chip8_window.hpp  main.cpp
include/core/: chip8.hpp  chip8_disassembler.hpp
include/ui/: chip8_disassembly_widget.hpp  chip8_display_widget.hpp  chip8_main_window.hpp  chip8_memory_widget.hpp  chip8_registers_widget.hpp  chip8_stack_widget.hpp
src/: main.cpp
src/core/: chip8.cpp  chip8_disassembler.cpp
src/ui/: chip8_disassembly_widget.cpp  chip8_display_widget.cpp  chip8_main_window.cpp  chip8_memory_widget.cpp  chip8_registers_widget.cpp  chip8_stack_widget.cpp
tests/: test_core.cpp
